// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Switch matches screenshot 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-ejeiXn-size-md c-eZVbbP-jUykxI-color-primary decaSwitch-input"
      id=":r0:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-cBwwJf-size-md c-cBVJpg-jQVVMl-cv"
      for=":r0:"
    >
      Label Text
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Switch renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-ejeiXn-size-md c-eZVbbP-jUykxI-color-primary decaSwitch-input"
      id=":r3:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-cBwwJf-size-md"
      for=":r3:"
    />
  </div>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-ejeiXn-size-md c-eZVbbP-jSzNM-color-secondary decaSwitch-input"
      id=":r4:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-cBwwJf-size-md"
      for=":r4:"
    />
  </div>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-ejeiXn-size-md c-eZVbbP-dfhkoQ-color-success decaSwitch-input"
      id=":r5:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-cBwwJf-size-md"
      for=":r5:"
    />
  </div>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-ejeiXn-size-md c-eZVbbP-hzedXz-color-warning decaSwitch-input"
      id=":r6:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-cBwwJf-size-md"
      for=":r6:"
    />
  </div>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-ejeiXn-size-md c-eZVbbP-jaVRmd-color-error decaSwitch-input"
      id=":r7:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-cBwwJf-size-md"
      for=":r7:"
    />
  </div>
</DocumentFragment>
`;

exports[`components/Switch renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-jWLXHG-size-sm c-eZVbbP-jUykxI-color-primary decaSwitch-input"
      id=":r8:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-ipHRvc-size-sm"
      for=":r8:"
    />
  </div>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-ejeiXn-size-md c-eZVbbP-jUykxI-color-primary decaSwitch-input"
      id=":r9:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-cBwwJf-size-md"
      for=":r9:"
    />
  </div>
  <div
    class="c-gidqah decaSwitch-root"
  >
    <input
      class="c-eZVbbP c-eZVbbP-hPARGX-size-lg c-eZVbbP-jUykxI-color-primary decaSwitch-input"
      id=":ra:"
      type="checkbox"
      value=""
    />
    <label
      class="c-cBVJpg c-cBVJpg-duUVkS-size-lg"
      for=":ra:"
    />
  </div>
</DocumentFragment>
`;
